--- a/skill-checker/css/pirates.css
+++ b/skill-checker/css/pirates.css
@@ -62,7 +62,8 @@
                font: bold 18px/28px Trebuchet MS;
                text-indent: 5px;  
 			       text-align: center;
-line-height: 35px;			   
+line-height: 35px;	
+    padding-right: 25px;
                }
                
 			   input#SkillCode
