--- a/skill-checker/css/pirates.css
+++ b/skill-checker/css/pirates.css
@@ -32,6 +32,7 @@
         width: 100%;
         margin: 0 0 20px 0;
         float: left;
+		margin-bottom: 411px;
         }
            
               #Points
