--- a/skill-checker/css/pirates.css
+++ b/skill-checker/css/pirates.css
@@ -254,7 +254,7 @@ img
 	float: left; 
 	width: 600px; 
 
-	margin: 50px 0 0 0;	
+	margin: 50px 0 0 56px;	
 	}
                  
            .charNaviItem{
